added a panel in the start menu
it will allow saving/loading game progress.
You can only open/close the panel atm, it doesn't save/load anything.

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -269,6 +269,7 @@
     <Compile Include="Assets\Scripts\EnemyCastleController.cs" />
     <Compile Include="Assets\Scripts\GameData.cs" />
     <Compile Include="Assets\Scripts\Health.cs" />
+    <Compile Include="Assets\Scripts\LoadGamePanel.cs" />
     <Compile Include="Assets\Scripts\LoadScene.cs" />
     <Compile Include="Assets\Scripts\Microtransactions\MictransactionsManager.cs" />
     <Compile Include="Assets\Scripts\MobileCam.cs" />
