Basic drinking logic
* deleted the old salt icon asset
* changed the inkeeper dialogue
* added base logic for drinking at the tavern (the UI doesn't update for
some reason if you start the game outside of tavern)
* removed the 'exchange' button from the recruitment panel

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -285,11 +285,12 @@
     <Compile Include="Assets\Scripts\Spawn.cs" />
     <Compile Include="Assets\Scripts\StatItem.cs" />
     <Compile Include="Assets\Scripts\StatsContainer.cs" />
-    <Compile Include="Assets\Scripts\TakePictureButton.cs" />
-    <Compile Include="Assets\Scripts\TavernCustomizeUI.cs" />
-    <Compile Include="Assets\Scripts\TavernGUIchanger.cs" />
-    <Compile Include="Assets\Scripts\TavernHUB.cs" />
-    <Compile Include="Assets\Scripts\TavernStatsPageUI.cs" />
+    <Compile Include="Assets\Scripts\TavernScripts\Drink.cs" />
+    <Compile Include="Assets\Scripts\TavernScripts\TakePictureButton.cs" />
+    <Compile Include="Assets\Scripts\TavernScripts\TavernCustomizeUI.cs" />
+    <Compile Include="Assets\Scripts\TavernScripts\TavernGUIchanger.cs" />
+    <Compile Include="Assets\Scripts\TavernScripts\TavernHUB.cs" />
+    <Compile Include="Assets\Scripts\TavernScripts\TavernStatsPageUI.cs" />
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
     <Compile Include="Assets\Scripts\Waypoint.cs" />
