--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -259,6 +259,8 @@
     <Compile Include="Assets\Scripts\AssignCaptainFace.cs" />
     <Compile Include="Assets\Scripts\Attack.cs" />
     <Compile Include="Assets\Scripts\AvatarFace.cs" />
+    <Compile Include="Assets\Scripts\Battle\Hangover.cs" />
+    <Compile Include="Assets\Scripts\Battle\Health.cs" />
     <Compile Include="Assets\Scripts\BattleFaceCreate.cs" />
     <Compile Include="Assets\Scripts\CastleHUB.cs" />
     <Compile Include="Assets\Scripts\Champion.cs" />
@@ -268,7 +270,6 @@
     <Compile Include="Assets\Scripts\DontDestroyOnLoad.cs" />
     <Compile Include="Assets\Scripts\EnemyCastleController.cs" />
     <Compile Include="Assets\Scripts\GameData.cs" />
-    <Compile Include="Assets\Scripts\Health.cs" />
     <Compile Include="Assets\Scripts\LoadGamePanel.cs" />
     <Compile Include="Assets\Scripts\LoadScene.cs" />
     <Compile Include="Assets\Scripts\Microtransactions\MictransactionsManager.cs" />
@@ -285,12 +286,12 @@
     <Compile Include="Assets\Scripts\Spawn.cs" />
     <Compile Include="Assets\Scripts\StatItem.cs" />
     <Compile Include="Assets\Scripts\StatsContainer.cs" />
-    <Compile Include="Assets\Scripts\TavernScripts\Drink.cs" />
-    <Compile Include="Assets\Scripts\TavernScripts\TakePictureButton.cs" />
-    <Compile Include="Assets\Scripts\TavernScripts\TavernCustomizeUI.cs" />
-    <Compile Include="Assets\Scripts\TavernScripts\TavernGUIchanger.cs" />
-    <Compile Include="Assets\Scripts\TavernScripts\TavernHUB.cs" />
-    <Compile Include="Assets\Scripts\TavernScripts\TavernStatsPageUI.cs" />
+    <Compile Include="Assets\Scripts\Tavern\Drink.cs" />
+    <Compile Include="Assets\Scripts\Tavern\TakePictureButton.cs" />
+    <Compile Include="Assets\Scripts\Tavern\TavernCustomizeUI.cs" />
+    <Compile Include="Assets\Scripts\Tavern\TavernGUIchanger.cs" />
+    <Compile Include="Assets\Scripts\Tavern\TavernHUB.cs" />
+    <Compile Include="Assets\Scripts\Tavern\TavernStatsPageUI.cs" />
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
     <Compile Include="Assets\Scripts\Waypoint.cs" />
