no important changes
just saved my work before resting for the day

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -288,6 +288,7 @@
     <Compile Include="Assets\Scripts\Tavern\Drink.cs" />
     <Compile Include="Assets\Scripts\Tavern\TakePictureButton.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernCustomizeUI.cs" />
+    <Compile Include="Assets\Scripts\Tavern\TavernDialogueControl.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernGUIchanger.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernHUB.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernStatsPageUI.cs" />
