Started working on new battle mechanics
I will doing the changes in the Test scene. There's nothing interesting
for now, the enemy just spawns some arrows

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -259,6 +259,7 @@
     <Compile Include="Assets\Scripts\AssignCaptainFace.cs" />
     <Compile Include="Assets\Scripts\Attack.cs" />
     <Compile Include="Assets\Scripts\AvatarFace.cs" />
+    <Compile Include="Assets\Scripts\Battle\EnemyController.cs" />
     <Compile Include="Assets\Scripts\Battle\Hangover.cs" />
     <Compile Include="Assets\Scripts\Battle\Health.cs" />
     <Compile Include="Assets\Scripts\BattleFaceCreate.cs" />
@@ -274,7 +275,6 @@
     <Compile Include="Assets\Scripts\Microtransactions\MictransactionsManager.cs" />
     <Compile Include="Assets\Scripts\MobileCam.cs" />
     <Compile Include="Assets\Scripts\MusicControl.cs" />
-    <Compile Include="Assets\Scripts\MustDeleteThisScriptLater.cs" />
     <Compile Include="Assets\Scripts\PaymentButton.cs" />
     <Compile Include="Assets\Scripts\PlayerProfile.cs" />
     <Compile Include="Assets\Scripts\QuitController.cs" />
@@ -290,10 +290,10 @@
     <Compile Include="Assets\Scripts\Tavern\TavernCustomizeUI.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernDialogueControl.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernGUIchanger.cs" />
-    <Compile Include="Assets\Scripts\Tavern\TavernHUB.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernStatsPageUI.cs" />
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
+    <Compile Include="Assets\Scripts\Utils\Testing.cs" />
     <Compile Include="Assets\Scripts\Waypoint.cs" />
     <Compile Include="Assets\Scripts\WaypointFollower.cs" />
   </ItemGroup>
