Can't open champion stats if you have no champions

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -278,6 +278,7 @@
     <Compile Include="Assets\Scripts\GameData.cs" />
     <Compile Include="Assets\Scripts\LoadGamePanel.cs" />
     <Compile Include="Assets\Scripts\LoadScene.cs" />
+    <Compile Include="Assets\Scripts\Map\CloseMap.cs" />
     <Compile Include="Assets\Scripts\Map\Map.cs" />
     <Compile Include="Assets\Scripts\Microtransactions\MictransactionsManager.cs" />
     <Compile Include="Assets\Scripts\MobileCam.cs" />
