New champions have random skillpoints

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -291,6 +291,7 @@
     <Compile Include="Assets\Scripts\Spawn.cs" />
     <Compile Include="Assets\Scripts\StatItem.cs" />
     <Compile Include="Assets\Scripts\StatsContainer.cs" />
+    <Compile Include="Assets\Scripts\Tavern\ChampionSkillGenerator.cs" />
     <Compile Include="Assets\Scripts\Tavern\Drink.cs" />
     <Compile Include="Assets\Scripts\Tavern\TakePictureButton.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernCustomizeUI.cs" />
