Can't enter battle scene with 0 champions
also added some new sprites

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -268,8 +268,9 @@
     <Compile Include="Assets\Scripts\Battle\PlayerUnit.cs" />
     <Compile Include="Assets\Scripts\Battle\ResourceTextController.cs" />
     <Compile Include="Assets\Scripts\BattleFaceCreate.cs" />
-    <Compile Include="Assets\Scripts\CastleHUB.cs" />
+    <Compile Include="Assets\Scripts\Castle\CastleHUB.cs" />
     <Compile Include="Assets\Scripts\Champion.cs" />
+    <Compile Include="Assets\Scripts\ChampionEffect.cs" />
     <Compile Include="Assets\Scripts\ChangeCaptainImage.cs" />
     <Compile Include="Assets\Scripts\CreateChampion.cs" />
     <Compile Include="Assets\Scripts\DestroyOnTap.cs" />
