Recruiting logic changed + added unit descriptions

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -295,12 +295,14 @@
     <Compile Include="Assets\Scripts\StatsContainer.cs" />
     <Compile Include="Assets\Scripts\Tavern\ChampionSkillGenerator.cs" />
     <Compile Include="Assets\Scripts\Tavern\Drink.cs" />
+    <Compile Include="Assets\Scripts\Tavern\RecruitUI.cs" />
     <Compile Include="Assets\Scripts\Tavern\TakePictureButton.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernCustomizeUI.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernDialogueControl.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernGUIchanger.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernStatsPageUI.cs" />
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
+    <Compile Include="Assets\Scripts\UI\HelpPanel.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
     <Compile Include="Assets\Scripts\Utils\Testing.cs" />
     <Compile Include="Assets\Scripts\Waypoint.cs" />
