can generate random champion names

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -295,6 +295,7 @@
     <Compile Include="Assets\Scripts\StatsContainer.cs" />
     <Compile Include="Assets\Scripts\Tavern\ChampionSkillGenerator.cs" />
     <Compile Include="Assets\Scripts\Tavern\Drink.cs" />
+    <Compile Include="Assets\Scripts\Tavern\RandomName.cs" />
     <Compile Include="Assets\Scripts\Tavern\RecruitUI.cs" />
     <Compile Include="Assets\Scripts\Tavern\TakePictureButton.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernCustomizeUI.cs" />
