--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Assets\Scripts\Battle\Health.cs" />
     <Compile Include="Assets\Scripts\Battle\PlayerUnit.cs" />
     <Compile Include="Assets\Scripts\Battle\ResourceTextController.cs" />
+    <Compile Include="Assets\Scripts\Battle\UnitSortingLayers.cs" />
     <Compile Include="Assets\Scripts\BattleFaceCreate.cs" />
     <Compile Include="Assets\Scripts\Castle\CastleHUB.cs" />
     <Compile Include="Assets\Scripts\Champion.cs" />
