Fixed champion recruit bug
you can no longer recruit champions if you have insufficient resources

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Assets\Scripts\QuitController.cs" />
     <Compile Include="Assets\Scripts\QuitGame.cs" />
     <Compile Include="Assets\Scripts\RenderController.cs" />
+    <Compile Include="Assets\Scripts\ResourceControl.cs" />
     <Compile Include="Assets\Scripts\Resources.cs" />
     <Compile Include="Assets\Scripts\SaveLoad.cs" />
     <Compile Include="Assets\Scripts\Spawn.cs" />
