Some UI improvements

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -273,6 +273,7 @@
     <Compile Include="Assets\Scripts\Champion.cs" />
     <Compile Include="Assets\Scripts\ChampionEffect.cs" />
     <Compile Include="Assets\Scripts\ChangeCaptainImage.cs" />
+    <Compile Include="Assets\Scripts\ChangeFormationButton.cs" />
     <Compile Include="Assets\Scripts\CreateChampion.cs" />
     <Compile Include="Assets\Scripts\DestroyOnTap.cs" />
     <Compile Include="Assets\Scripts\DontDestroyOnLoad.cs" />
