Added dash mechanic for regular units
+ improved UI for champion selection before battle

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Assets\Scripts\AvatarFace.cs" />
     <Compile Include="Assets\Scripts\Battle\Arrow.cs" />
     <Compile Include="Assets\Scripts\Battle\CastleArrow.cs" />
+    <Compile Include="Assets\Scripts\Battle\Dash.cs" />
     <Compile Include="Assets\Scripts\Battle\EnemyBalancer.cs" />
     <Compile Include="Assets\Scripts\Battle\EnemyController.cs" />
     <Compile Include="Assets\Scripts\Battle\EnemyUnit.cs" />
@@ -296,6 +297,7 @@
     <Compile Include="Assets\Scripts\Spawn.cs" />
     <Compile Include="Assets\Scripts\StatItem.cs" />
     <Compile Include="Assets\Scripts\StatsContainer.cs" />
+    <Compile Include="Assets\Scripts\Strategy view\StrategyView.cs" />
     <Compile Include="Assets\Scripts\Tavern\ChampionSkillGenerator.cs" />
     <Compile Include="Assets\Scripts\Tavern\Drink.cs" />
     <Compile Include="Assets\Scripts\Tavern\RandomName.cs" />
