champions get a random ability upon recruit

--- a/memedieval.CSharp.Editor.Plugins.csproj
+++ b/memedieval.CSharp.Editor.Plugins.csproj
@@ -342,6 +342,7 @@
   <ItemGroup>
     <None Include="Assets\Plugins\FMOD\LICENSE.TXT" />
     <None Include="Assets\Plugins\UnityPurchasing\script\link.xml" />
+    <None Include="Assets\Sprites\Creative commons\Sources.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
