--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -272,6 +272,7 @@
     <Compile Include="Assets\Scripts\BattleFaceCreate.cs" />
     <Compile Include="Assets\Scripts\Castle\CastleHUB.cs" />
     <Compile Include="Assets\Scripts\Champion.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities.cs" />
     <Compile Include="Assets\Scripts\ChampionEffect.cs" />
     <Compile Include="Assets\Scripts\ChangeCaptainImage.cs" />
     <Compile Include="Assets\Scripts\ChangeFormationButton.cs" />
@@ -317,6 +318,7 @@
   <ItemGroup>
     <None Include="Assets\Plugins\FMOD\LICENSE.TXT" />
     <None Include="Assets\Plugins\UnityPurchasing\script\link.xml" />
+    <None Include="Assets\Sprites\Creative commons\Sources.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
