--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -309,9 +309,12 @@
     <Compile Include="Assets\Scripts\Tavern\TavernGUIchanger.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernStatsPageUI.cs" />
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
+    <Compile Include="Assets\Scripts\UI\FollowObject.cs" />
     <Compile Include="Assets\Scripts\UI\HelpPanel.cs" />
+    <Compile Include="Assets\Scripts\Utils\CheckColor.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
     <Compile Include="Assets\Scripts\Utils\Testing.cs" />
+    <Compile Include="Assets\Scripts\Utils\TextureExtension.cs" />
     <Compile Include="Assets\Scripts\Waypoint.cs" />
     <Compile Include="Assets\Scripts\WaypointFollower.cs" />
   </ItemGroup>
