started working on the last ability

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Assets\Scripts\AssignCaptainFace.cs" />
     <Compile Include="Assets\Scripts\Attack.cs" />
     <Compile Include="Assets\Scripts\AvatarFace.cs" />
+    <Compile Include="Assets\Scripts\Battle\AnimatorSpeed.cs" />
     <Compile Include="Assets\Scripts\Battle\Arrow.cs" />
     <Compile Include="Assets\Scripts\Battle\CastleArrow.cs" />
     <Compile Include="Assets\Scripts\Battle\Dash.cs" />
