--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -312,6 +312,7 @@
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
     <Compile Include="Assets\Scripts\UI\FollowObject.cs" />
     <Compile Include="Assets\Scripts\UI\HelpPanel.cs" />
+    <Compile Include="Assets\Scripts\UI\HelpText.cs" />
     <Compile Include="Assets\Scripts\Utils\CheckColor.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
     <Compile Include="Assets\Scripts\Utils\Testing.cs" />
