Added animation for rallying shout

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -310,6 +310,7 @@
     <Compile Include="Assets\Scripts\Tavern\TavernGUIchanger.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernStatsPageUI.cs" />
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
+    <Compile Include="Assets\Scripts\UI\CursorAnimation.cs" />
     <Compile Include="Assets\Scripts\UI\FollowObject.cs" />
     <Compile Include="Assets\Scripts\UI\HelpPanel.cs" />
     <Compile Include="Assets\Scripts\UI\HelpText.cs" />
