Champion rooster displays random champions

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Assets\Scripts\Microtransactions\MictransactionsManager.cs" />
     <Compile Include="Assets\Scripts\MobileCam.cs" />
     <Compile Include="Assets\Scripts\MusicControl.cs" />
+    <Compile Include="Assets\Scripts\NeutralChampions.cs" />
     <Compile Include="Assets\Scripts\PaymentButton.cs" />
     <Compile Include="Assets\Scripts\PlayerProfile.cs" />
     <Compile Include="Assets\Scripts\QuitController.cs" />
