Updated champion rooster

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -321,6 +321,7 @@
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
     <Compile Include="Assets\Scripts\Utils\Testing.cs" />
     <Compile Include="Assets\Scripts\Utils\TextureExtension.cs" />
+    <Compile Include="Assets\Scripts\Utils\TextureToSprite.cs" />
     <Compile Include="Assets\Scripts\Waypoint.cs" />
     <Compile Include="Assets\Scripts\WaypointFollower.cs" />
   </ItemGroup>
