Added option to fire champions

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -302,6 +302,7 @@
     <Compile Include="Assets\Scripts\StatItem.cs" />
     <Compile Include="Assets\Scripts\StatsContainer.cs" />
     <Compile Include="Assets\Scripts\Strategy view\StrategyView.cs" />
+    <Compile Include="Assets\Scripts\Tavern\ChampionButton.cs" />
     <Compile Include="Assets\Scripts\Tavern\ChampionRooster.cs" />
     <Compile Include="Assets\Scripts\Tavern\ChampionSkillGenerator.cs" />
     <Compile Include="Assets\Scripts\Tavern\Drink.cs" />
