Fixed bugs in displaying default champion pictures

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -318,6 +318,7 @@
     <Compile Include="Assets\Scripts\UI\FollowObject.cs" />
     <Compile Include="Assets\Scripts\UI\HelpPanel.cs" />
     <Compile Include="Assets\Scripts\UI\HelpText.cs" />
+    <Compile Include="Assets\Scripts\Utils\ChampionPictureActivator.cs" />
     <Compile Include="Assets\Scripts\Utils\CheckColor.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
     <Compile Include="Assets\Scripts\Utils\Testing.cs" />
