Fixed bug where changing scenes triggered death sfx

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -278,6 +278,7 @@
     <Compile Include="Assets\Scripts\ChangeCaptainImage.cs" />
     <Compile Include="Assets\Scripts\ChangeFormationButton.cs" />
     <Compile Include="Assets\Scripts\CreateChampion.cs" />
+    <Compile Include="Assets\Scripts\CreatePlayerProfile.cs" />
     <Compile Include="Assets\Scripts\CursorAnimFinder.cs" />
     <Compile Include="Assets\Scripts\DestroyOnTap.cs" />
     <Compile Include="Assets\Scripts\DontDestroyOnLoad.cs" />
