Test to remove Fmod log file to ignore

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -299,6 +299,7 @@
     <Compile Include="Assets\Scripts\ResourceControl.cs" />
     <Compile Include="Assets\Scripts\Resources.cs" />
     <Compile Include="Assets\Scripts\SaveLoad.cs" />
+    <Compile Include="Assets\Scripts\SoundSettings.cs" />
     <Compile Include="Assets\Scripts\Spawn.cs" />
     <Compile Include="Assets\Scripts\StatItem.cs" />
     <Compile Include="Assets\Scripts\StatsContainer.cs" />
@@ -328,7 +329,6 @@
     <Compile Include="Assets\Scripts\Utils\TextureToSprite.cs" />
     <Compile Include="Assets\Scripts\Waypoint.cs" />
     <Compile Include="Assets\Scripts\WaypointFollower.cs" />
-    <Compile Include="Assets\SoundSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Plugins\FMOD\LICENSE.TXT" />
