--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -315,6 +315,8 @@
     <Compile Include="Assets\Scripts\Tavern\TavernDialogueControl.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernGUIchanger.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernStatsPageUI.cs" />
+    <Compile Include="Assets\Scripts\Tutorial\Tutorial.cs" />
+    <Compile Include="Assets\Scripts\Tutorial\TutorialArrow.cs" />
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
     <Compile Include="Assets\Scripts\UI\CursorAnimation.cs" />
     <Compile Include="Assets\Scripts\UI\FollowObject.cs" />
