--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -316,6 +316,7 @@
     <Compile Include="Assets\Scripts\Tavern\TavernGUIchanger.cs" />
     <Compile Include="Assets\Scripts\Tavern\TavernStatsPageUI.cs" />
     <Compile Include="Assets\Scripts\Tutorial\Tutorial.cs" />
+    <Compile Include="Assets\Scripts\Tutorial\TutorialArcher.cs" />
     <Compile Include="Assets\Scripts\Tutorial\TutorialArrow.cs" />
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
     <Compile Include="Assets\Scripts\UI\CursorAnimation.cs" />
