--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -318,6 +318,7 @@
     <Compile Include="Assets\Scripts\Tutorial\Tutorial.cs" />
     <Compile Include="Assets\Scripts\Tutorial\TutorialArcher.cs" />
     <Compile Include="Assets\Scripts\Tutorial\TutorialArrow.cs" />
+    <Compile Include="Assets\Scripts\Tutorial\TutorialIntro.cs" />
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
     <Compile Include="Assets\Scripts\UI\CursorAnimation.cs" />
     <Compile Include="Assets\Scripts\UI\FollowObject.cs" />
