Added options button in tutorial
-changed version number to 0.1.4

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -323,6 +323,7 @@
     <Compile Include="Assets\Scripts\UI\CursorAnimation.cs" />
     <Compile Include="Assets\Scripts\UI\FollowObject.cs" />
     <Compile Include="Assets\Scripts\UI\HelpText.cs" />
+    <Compile Include="Assets\Scripts\UI\PauseWhileOptionsOpen.cs" />
     <Compile Include="Assets\Scripts\Utils\ChampionPictureActivator.cs" />
     <Compile Include="Assets\Scripts\Utils\CheckColor.cs" />
     <Compile Include="Assets\Scripts\Utils\FlipTexture2D.cs" />
