--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -327,6 +327,7 @@
     <Compile Include="Assets\Scripts\Utils\ChampionPictureActivator.cs" />
     <Compile Include="Assets\Scripts\Utils\CheckColor.cs" />
     <Compile Include="Assets\Scripts\Utils\FlipTexture2D.cs" />
+    <Compile Include="Assets\Scripts\Utils\ResizeOnClick.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
     <Compile Include="Assets\Scripts\Utils\Testing.cs" />
     <Compile Include="Assets\Scripts\Utils\TextureExtension.cs" />
