--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -283,6 +283,7 @@
     <Compile Include="Assets\Scripts\DestroyOnTap.cs" />
     <Compile Include="Assets\Scripts\DontDestroyOnLoad.cs" />
     <Compile Include="Assets\Scripts\EnemyCastleController.cs" />
+    <Compile Include="Assets\Scripts\ExpController.cs" />
     <Compile Include="Assets\Scripts\GameData.cs" />
     <Compile Include="Assets\Scripts\LoadGamePanel.cs" />
     <Compile Include="Assets\Scripts\LoadScene.cs" />
