--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -333,6 +333,7 @@
     <Compile Include="Assets\Scripts\Utils\Testing.cs" />
     <Compile Include="Assets\Scripts\Utils\TextureExtension.cs" />
     <Compile Include="Assets\Scripts\Utils\TextureToSprite.cs" />
+    <Compile Include="Assets\Scripts\Utils\ToggleGameObject.cs" />
     <Compile Include="Assets\Scripts\Waypoint.cs" />
     <Compile Include="Assets\Scripts\WaypointFollower.cs" />
   </ItemGroup>
