Improved Map UI for champion selection

--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -322,6 +322,7 @@
     <Compile Include="Assets\Scripts\Tutorial\TutorialIntro.cs" />
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
     <Compile Include="Assets\Scripts\UI\CursorAnimation.cs" />
+    <Compile Include="Assets\Scripts\UI\DisableScrollView.cs" />
     <Compile Include="Assets\Scripts\UI\FollowObject.cs" />
     <Compile Include="Assets\Scripts\UI\HelpText.cs" />
     <Compile Include="Assets\Scripts\UI\PauseWhileOptionsOpen.cs" />
