--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -326,6 +326,7 @@
     <Compile Include="Assets\Scripts\UI\FollowObject.cs" />
     <Compile Include="Assets\Scripts\UI\HelpText.cs" />
     <Compile Include="Assets\Scripts\UI\PauseWhileOptionsOpen.cs" />
+    <Compile Include="Assets\Scripts\Utils\BattleCheat.cs" />
     <Compile Include="Assets\Scripts\Utils\ChampionPictureActivator.cs" />
     <Compile Include="Assets\Scripts\Utils\CheckColor.cs" />
     <Compile Include="Assets\Scripts\Utils\FlipTexture2D.cs" />
