--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Assets\Scripts\AvatarFace.cs" />
     <Compile Include="Assets\Scripts\Battle\AnimatorSpeed.cs" />
     <Compile Include="Assets\Scripts\Battle\Arrow.cs" />
+    <Compile Include="Assets\Scripts\Battle\BattleOver.cs" />
     <Compile Include="Assets\Scripts\Battle\CastleArrow.cs" />
     <Compile Include="Assets\Scripts\Battle\Dash.cs" />
     <Compile Include="Assets\Scripts\Battle\EnemyBalancer.cs" />
