--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -270,6 +270,7 @@
     <Compile Include="Assets\Scripts\Battle\Health.cs" />
     <Compile Include="Assets\Scripts\Battle\PlayerUnit.cs" />
     <Compile Include="Assets\Scripts\Battle\ResourceTextController.cs" />
+    <Compile Include="Assets\Scripts\Battle\TimeControl.cs" />
     <Compile Include="Assets\Scripts\Battle\UnitSortingLayers.cs" />
     <Compile Include="Assets\Scripts\BattleFaceCreate.cs" />
     <Compile Include="Assets\Scripts\Castle\CastleHUB.cs" />
