--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -270,6 +270,7 @@
     <Compile Include="Assets\Scripts\Battle\Health.cs" />
     <Compile Include="Assets\Scripts\Battle\PlayerUnit.cs" />
     <Compile Include="Assets\Scripts\Battle\ResourceTextController.cs" />
+    <Compile Include="Assets\Scripts\Battle\Spawn.cs" />
     <Compile Include="Assets\Scripts\Battle\TimeControl.cs" />
     <Compile Include="Assets\Scripts\Battle\UnitSortingLayers.cs" />
     <Compile Include="Assets\Scripts\BattleFaceCreate.cs" />
@@ -303,7 +304,6 @@
     <Compile Include="Assets\Scripts\Resources.cs" />
     <Compile Include="Assets\Scripts\SaveLoad.cs" />
     <Compile Include="Assets\Scripts\SoundSettings.cs" />
-    <Compile Include="Assets\Scripts\Spawn.cs" />
     <Compile Include="Assets\Scripts\StatItem.cs" />
     <Compile Include="Assets\Scripts\StatsContainer.cs" />
     <Compile Include="Assets\Scripts\Strategy view\StrategyView.cs" />
@@ -332,6 +332,7 @@
     <Compile Include="Assets\Scripts\Utils\ChampionPictureActivator.cs" />
     <Compile Include="Assets\Scripts\Utils\CheckColor.cs" />
     <Compile Include="Assets\Scripts\Utils\FlipTexture2D.cs" />
+    <Compile Include="Assets\Scripts\Utils\ResizeGameToFitScreen.cs" />
     <Compile Include="Assets\Scripts\Utils\ResizeOnClick.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
     <Compile Include="Assets\Scripts\Utils\Testing.cs" />
