--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -323,6 +323,8 @@
     <Compile Include="Assets\Scripts\Tutorial\TutorialArrow.cs" />
     <Compile Include="Assets\Scripts\Tutorial\TutorialIntro.cs" />
     <Compile Include="Assets\Scripts\TutorialButton.cs" />
+    <Compile Include="Assets\Scripts\UI\ChangeUIToFitScreen.cs" />
+    <Compile Include="Assets\Scripts\UI\CheckUIVisibility.cs" />
     <Compile Include="Assets\Scripts\UI\CursorAnimation.cs" />
     <Compile Include="Assets\Scripts\UI\DisableScrollView.cs" />
     <Compile Include="Assets\Scripts\UI\FollowObject.cs" />
@@ -332,7 +334,6 @@
     <Compile Include="Assets\Scripts\Utils\ChampionPictureActivator.cs" />
     <Compile Include="Assets\Scripts\Utils\CheckColor.cs" />
     <Compile Include="Assets\Scripts\Utils\FlipTexture2D.cs" />
-    <Compile Include="Assets\Scripts\Utils\ResizeGameToFitScreen.cs" />
     <Compile Include="Assets\Scripts\Utils\ResizeOnClick.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
     <Compile Include="Assets\Scripts\Utils\Testing.cs" />
