--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -291,6 +291,7 @@
     <Compile Include="Assets\Scripts\LoadGamePanel.cs" />
     <Compile Include="Assets\Scripts\LoadScene.cs" />
     <Compile Include="Assets\Scripts\Map\Map.cs" />
+    <Compile Include="Assets\Scripts\Map\SwitchMapButton.cs" />
     <Compile Include="Assets\Scripts\Microtransactions\MictransactionsManager.cs" />
     <Compile Include="Assets\Scripts\MobileCam.cs" />
     <Compile Include="Assets\Scripts\MusicControl.cs" />
