--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -343,6 +343,7 @@
     <Compile Include="Assets\Scripts\Utils\TextureExtension.cs" />
     <Compile Include="Assets\Scripts\Utils\TextureToSprite.cs" />
     <Compile Include="Assets\Scripts\Utils\ToggleGameObject.cs" />
+    <Compile Include="Assets\Scripts\Utils\ToggleGamePause.cs" />
     <Compile Include="Assets\Scripts\Waypoint.cs" />
     <Compile Include="Assets\Scripts\WaypointFollower.cs" />
   </ItemGroup>
