--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -274,6 +274,7 @@
     <Compile Include="Assets\Scripts\Battle\TimeControl.cs" />
     <Compile Include="Assets\Scripts\Battle\UnitSortingLayers.cs" />
     <Compile Include="Assets\Scripts\BattleFaceCreate.cs" />
+    <Compile Include="Assets\Scripts\Camera\MoveCamera.cs" />
     <Compile Include="Assets\Scripts\Castle\CastleHUB.cs" />
     <Compile Include="Assets\Scripts\Champion.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities.cs" />
@@ -332,6 +333,7 @@
     <Compile Include="Assets\Scripts\UI\FollowObject.cs" />
     <Compile Include="Assets\Scripts\UI\HelpText.cs" />
     <Compile Include="Assets\Scripts\UI\PauseWhileOptionsOpen.cs" />
+    <Compile Include="Assets\Scripts\UI\ToggleUIText.cs" />
     <Compile Include="Assets\Scripts\UI\UpdateResourcesUI.cs" />
     <Compile Include="Assets\Scripts\Utils\BattleCheat.cs" />
     <Compile Include="Assets\Scripts\Utils\ChampionPictureActivator.cs" />
@@ -339,6 +341,7 @@
     <Compile Include="Assets\Scripts\Utils\FlipTexture2D.cs" />
     <Compile Include="Assets\Scripts\Utils\ResizeOnClick.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
+    <Compile Include="Assets\Scripts\Utils\SwipeManager.cs" />
     <Compile Include="Assets\Scripts\Utils\Testing.cs" />
     <Compile Include="Assets\Scripts\Utils\TextureExtension.cs" />
     <Compile Include="Assets\Scripts\Utils\TextureToSprite.cs" />
