--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -338,6 +338,7 @@
     <Compile Include="Assets\Scripts\Utils\BattleCheat.cs" />
     <Compile Include="Assets\Scripts\Utils\ChampionPictureActivator.cs" />
     <Compile Include="Assets\Scripts\Utils\CheckColor.cs" />
+    <Compile Include="Assets\Scripts\Utils\DisableScreenSleep.cs" />
     <Compile Include="Assets\Scripts\Utils\FlipTexture2D.cs" />
     <Compile Include="Assets\Scripts\Utils\ResizeOnClick.cs" />
     <Compile Include="Assets\Scripts\Utils\Singleton.cs" />
