--- a/memedieval.CSharp.csproj
+++ b/memedieval.CSharp.csproj
@@ -268,7 +268,9 @@
     <Compile Include="Assets\Scripts\Battle\EnemyUnit.cs" />
     <Compile Include="Assets\Scripts\Battle\Hangover.cs" />
     <Compile Include="Assets\Scripts\Battle\Health.cs" />
+    <Compile Include="Assets\Scripts\Battle\PlayerChampionSpawn.cs" />
     <Compile Include="Assets\Scripts\Battle\PlayerUnit.cs" />
+    <Compile Include="Assets\Scripts\Battle\PlayerUnitSpawn.cs" />
     <Compile Include="Assets\Scripts\Battle\ResourceTextController.cs" />
     <Compile Include="Assets\Scripts\Battle\Spawn.cs" />
     <Compile Include="Assets\Scripts\Battle\TimeControl.cs" />
@@ -294,6 +296,7 @@
     <Compile Include="Assets\Scripts\Map\Map.cs" />
     <Compile Include="Assets\Scripts\Map\MapData.cs" />
     <Compile Include="Assets\Scripts\Map\SwitchMapButton.cs" />
+    <Compile Include="Assets\Scripts\Market\Market.cs" />
     <Compile Include="Assets\Scripts\Microtransactions\MictransactionsManager.cs" />
     <Compile Include="Assets\Scripts\MobileCam.cs" />
     <Compile Include="Assets\Scripts\MusicControl.cs" />
